# Synapse

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  synapse-update.ps1
calyx/: BUILDING_ON_CALYX.md  CALYX_COMPLETE_DOCUMENTATION.md  Cargo.toml  LICENSE  README.md
calyx/crates/calyx-anneal/: Cargo.toml
calyx/crates/calyx-assay/: Cargo.toml
calyx/crates/calyx-aster/: Cargo.toml
calyx/crates/calyx-core/: Cargo.toml
calyx/crates/calyx-forge/: Cargo.toml  build.rs
calyx/crates/calyx-fsv/: Cargo.toml
calyx/crates/calyx-ledger/: Cargo.toml
calyx/crates/calyx-lodestar/: Cargo.toml
calyx/crates/calyx-loom/: Cargo.toml
calyx/crates/calyx-mincut/: Cargo.toml
calyx/crates/calyx-oracle/: Cargo.toml
calyx/crates/calyx-paths/: Cargo.toml
calyx/crates/calyx-registry/: Cargo.toml
calyx/crates/calyx-search/: Cargo.toml
calyx/crates/calyx-sextant/: Cargo.toml  build.rs
calyx/crates/calyx-testkit/: Cargo.toml
calyx/crates/calyx-ward/: Cargo.toml
crates/synapse-a11y/: Cargo.toml
crates/synapse-a11y/examples/: cdp_action_probe.rs  cdp_axtree_probe.rs  cdp_click_node_fsv.rs  cdp_click_node_probe.rs  cdp_console_probe.rs  cdp_iframe_action_fsv.rs  cdp_selector_engine_fsv.rs  cdp_selector_engine_probe.rs
crates/synapse-a11y/src/: cdp_action.rs  cdp_actionability.rs  cdp_binding.rs  cdp_clock.rs  cdp_console.rs  cdp_dialog.rs  cdp_dom.rs  cdp_emulation.rs  cdp_files.rs  cdp_lifecycle.rs  cdp_network.rs  cdp_value.rs  error.rs  events.rs  lib.rs  re_resolve.rs  window.rs
crates/synapse-a11y/tests/: uwp_snapshot_fsv.rs
crates/synapse-action/: Cargo.toml
crates/synapse-action/benches/: action_curve_step_calc_natural.rs  action_hardware_press.rs  action_recording_round_trip.rs
crates/synapse-action/src/: click_timing.rs  clipboard.rs  curve.rs  emitter.rs  error.rs  handle.rs  hotkey.rs  humanize.rs  invoke.rs  lease.rs  lib.rs  rate_limit.rs  recovery.rs  stroke.rs  validation.rs
crates/synapse-action/tests/: backend_resolution.rs  curve_fsv.rs  curve_natural_seed_42.rs  dynamics_natural_hello_world.rs  dynamics_round_trip_proptest.rs  emitter_fsv.rs  emitter_state.rs  handle_fsv.rs  handle_queue.rs  hardware_unavailable.rs  humanize.rs  mouse_drag_fsv.rs  mouse_stroke.rs  recording_backend.rs  recording_backend_fsv.rs  release_all_logging_fsv.rs  safety_panic_hook.rs  safety_timeout.rs  session_inputs.rs  software_non_windows_fsv.rs  vigem_xinput_fsv.rs
crates/synapse-audio/: Cargo.toml
crates/synapse-audio/src/: direction.rs  lib.rs  loopback.rs  stt.rs
crates/synapse-audio/tests/: direction.rs  stt.rs
crates/synapse-calyx/: Cargo.toml
crates/synapse-calyx/src/: async_vault.rs  error_bridge.rs  lib.rs  math.rs
crates/synapse-capture/: Cargo.toml
crates/synapse-capture/src/: bitmap.rs  controller.rs  error.rs  frame.rs  lib.rs  tests.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: defaults.rs  episodes.rs  error_codes.rs  intent.rs  lib.rs  retention.rs  routines.rs  types.rs  win32_hwnd.rs
crates/synapse-core/tests/: action_serde_proptest.rs  action_snapshots.rs  error_codes_literal.rs  event_filter_types.rs  ocr_types.rs  reality_types.rs  snapshots.rs  timeline_types.rs  types.rs
crates/synapse-hid-host/: Cargo.toml
crates/synapse-hid-host/benches/: hid_combo_timing.rs  hid_high_volume.rs
crates/synapse-hid-host/src/: error.rs  lib.rs  pipeline.rs
crates/synapse-hid-host/tests/: loopback.rs  pipeline.rs  scaffold.rs
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/examples/: dump_action_log.rs  dump_agent_events.rs  dump_agent_transcripts.rs
crates/synapse-mcp/src/: approval_protocol.rs  chrome_debugger_bridge.rs  connect.rs  daemon_lifecycle.rs  desktop_worker.rs  emitter_shutdown.rs  local_agent.rs  m1.rs  m2.rs  m3.rs  m4.rs  main.rs  safety.rs  secret_crypto.rs  server.rs  single_instance.rs  stdio_eof.rs
crates/synapse-mcp/tests/: agent_stats_tool.rs  capture_screenshot_downscale.rs  cli_modes.rs  force_panic_fsv.rs  health_call_fsv.rs  health_tools_list.rs  lifecycle_windows.rs  m0_demo_gate.rs  m1_tools_fsv.rs  m2_act_stroke_tool.rs  m2_act_stroke_unified_motion_semantics.rs  m2_aim_fsv.rs  m2_click_fsv.rs  m2_drag_fsv.rs  m2_file_menu_invoke_fsv.rs  m2_notepad_type_save.rs  m2_press_fsv.rs  m2_scroll_fsv.rs  m2_set_field_text_fsv.rs  m3_audio_transcribe_tool.rs  m3_default_resolution.rs  m3_episode_segment_tool.rs  m3_intent_current_tool.rs  m3_intent_events_tool.rs  m3_permissions_tool.rs  m3_profile_tools.rs  m3_reflex_cancel_tool.rs  m3_reflex_history_tool.rs  m3_reflex_list_tool.rs  m3_reflex_register_tool.rs  m3_replay_record_tool.rs  m3_routine_lifecycle_tool.rs  m3_storage_tool.rs  m3_timeline_control_tools.rs  m3_tools_list.rs  m4_agent_tasks_tool.rs  m4_agent_templates_tool.rs  m4_default_resolution.rs  m4_no_foreground_action_gate.rs  m4_tools_list.rs  (+7 more)
crates/synapse-models/: Cargo.toml
crates/synapse-models/src/: download.rs  ep.rs  error.rs  lib.rs  session.rs  verify.rs
crates/synapse-models/tests/: model_loader.rs  model_loader_fsv.rs
crates/synapse-overlay/: Cargo.toml
crates/synapse-overlay/src/: main.rs
crates/synapse-perception/: Cargo.toml
crates/synapse-perception/benches/: observe_warm_a11y_only.rs  observe_warm_hybrid.rs
crates/synapse-perception/src/: lib.rs  observe.rs  ocr.rs  template_match.rs
crates/synapse-perception/tests/: hud_anchor.rs  hud_extractor.rs  perception_fsv.rs  perception_regression.rs
crates/synapse-profiles/: Cargo.toml
crates/synapse-profiles/profiles/: chrome.toml  everquest.live.toml  luanti.minetest.toml  minecraft.java.toml  notepad.toml  terminal.toml  vscode.toml
crates/synapse-profiles/src/: error.rs  resolver.rs  toml_format.rs  watcher.rs
crates/synapse-profiles/tests/: package_manifest.rs  parse_bundled.rs  runtime_refresh.rs
crates/synapse-reflex/: Cargo.toml
crates/synapse-storage/: Cargo.toml  build.rs
crates/synapse-telemetry/: Cargo.toml
crates/synapse-test-utils/: Cargo.toml
firmware/pico-hid/: Cargo.toml
firmware/pico-hid/src/: led.rs  (+3 more)
(+2180 files in other folders)
