[workspace]
resolver = "2"
members = [
    "crates/synapse-mcp",
    "crates/synapse-core",
    "crates/synapse-capture",
    "crates/synapse-a11y",
    "crates/synapse-perception",
    "crates/synapse-audio",
    "crates/synapse-action",
    "crates/synapse-reflex",
    "crates/synapse-storage",
    "crates/synapse-profiles",
    "crates/synapse-hid-host",
    "crates/synapse-models",
    "crates/synapse-telemetry",
    "crates/synapse-test-utils",
    "crates/synapse-overlay",
]
default-members = ["crates/synapse-mcp", "crates/synapse-overlay"]
exclude = ["firmware/pico-hid"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["Synapse contributors"]
repository = "https://github.com/ChrisRoyse/Synapse"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
crossbeam = "0.8.4"
arc-swap = "1.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
axum = "0.8.9"
hyper = "1.9.0"
tower = "0.5.3"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Media_Ocr",
    "Storage_Streams",
] }
windows-capture = "2.0.0"
uiautomation = { version = "0.25.0", features = ["pattern", "control", "event"] }
chromiumoxide = "0.9.1"
wasapi = "0.23.0"
enigo = "0.6.1"
vigem-client = "0.1.4"
serialport = "4.9.0"
ort = { version = "2.0.0-rc.12", default-features = false }
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "zstd", "multi-threaded-cf"] }
sled = "1.0.0-alpha.124"
clap = { version = "4.6.1", features = ["derive", "env"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "serde"] }
schemars = { version = "1.2.1", features = ["chrono04", "derive"] }
regex = "1.12.3"
sha2 = "0.11.0"
crc16 = "0.4.0"
notify = "9.0.0-rc.4"
proptest = "1.11.0"
criterion = "0.8.2"
insta = { version = "1.47.2", features = ["json"] }
tempfile = "3.27.0"
mockall = "0.14.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
lto = false

[profile.release]
opt-level = 3
debug = "limited"
incremental = false
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.release-max]
inherits = "release"
codegen-units = 1
lto = "fat"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
