[workspace]
resolver = "2"
members = [
    "crates/synapse-mcp",
    "crates/synapse-core",
    "crates/synapse-capture",
    "crates/synapse-a11y",
    "crates/synapse-perception",
    "crates/synapse-audio",
    "crates/synapse-action",
    "crates/synapse-reflex",
    "crates/synapse-storage",
    "crates/synapse-profiles",
    "crates/synapse-everquest",
    "crates/synapse-models",
    "crates/synapse-telemetry",
    "crates/synapse-test-utils",
    "crates/synapse-overlay",
]
default-members = ["crates/synapse-mcp", "crates/synapse-overlay"]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
authors = ["Synapse contributors"]
repository = "https://github.com/ChrisRoyse/Synapse"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tokio-tungstenite = "0.29.0"
crossbeam = "0.8.4"
arc-swap = "1.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
async-trait = "0.1.89"
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
futures-util = "0.3.32"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
axum = { version = "0.8.9", features = ["ws"] }
hyper = "1.9.0"
tower = "0.5.3"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_System_StationsAndDesktops",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "UI_Notifications",
    "Data_Xml_Dom",
    "Foundation_Collections",
] }
windows-capture = "2.0.0"
uiautomation = { version = "0.25.0", features = ["pattern", "control", "event"] }
chromiumoxide = "0.9.1"
wasapi = "0.23.0"
enigo = { version = "0.6.1", default-features = false }
vigem-client = "0.1.4"
ort = { version = "2.0.0-rc.12", default-features = false }
rocksdb = { version = "0.24.0", default-features = false, features = ["lz4", "zstd", "multi-threaded-cf"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "serde"] }
schemars = { version = "1.2.1", features = ["chrono04", "derive"] }
regex = "1.12.3"
ed25519-dalek = "2.2.0"
sha2 = "0.11.0"
subtle = "2.6.1"
sysinfo = { version = "0.39.2", default-features = false, features = ["system"] }
notify = "9.0.0-rc.4"
fs2 = "0.4.3"
reqwest = "0.13.3"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
proptest = "1.11.0"
criterion = "0.8.2"
insta = { version = "1.47.2", features = ["json"] }
tempfile = "3.27.0"
mockall = "0.14.0"
x11rb = "0.13.2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.dev]
opt-level = 0
debug = "line-tables-only"
# incremental RE-ENABLED 2026-06-14 for fast edit-rebuild cycles (the single
# biggest lever for iterative dev speed — only the changed crate's modified
# codegen units recompile instead of the whole crate).
#
# The 2026-06-02 disable was a blunt fix for a 124 GB target/debug/incremental
# balloon. Root cause was NOT incremental being inherently unbounded (rustc
# finalizes and prunes stale per-crate session dirs) — it was an unmanaged
# target/ with no cleanup ever running, compounded across ~46 sibling worktrees.
# That is now addressed structurally by scripts/repo-maintenance.ps1 (cargo-sweep
# of artifacts unused >N days + stale-worktree pruning) on a scheduled task, so
# incremental's disk cost stays bounded. This override only affects THIS repo;
# the global ~/.cargo/config.toml `incremental = false` still governs others.
incremental = true
lto = false

# Dependencies change rarely and are not stepped through in a debugger — drop
# their debuginfo entirely so first-build and clean-rebuild link/compile less.
# Workspace members keep line-tables-only (above) for useful panic backtraces.
[profile.dev.package."*"]
debug = false

# release is the SHIPPED profile: the daemon-reinstall flow copies
# target/release/synapse-mcp.exe into ~/.cargo/bin. Re-tuned 2026-06-14 for FAST
# rebuilds (the iteration loop is build-the-daemon -> reinstall -> test), while
# staying a fully optimized binary:
#   lto = "thin"       parallel, near-fat runtime (<~3% on this IO/perception
#                      daemon; RocksDB is C++ and unaffected by Rust LTO) but a
#                      fraction of fat-LTO's serial link time.
#   codegen-units = 16 parallel codegen across all cores. fat + cgu=1 forced the
#                      whole synapse-mcp crate through ONE thread at the end,
#                      idling 28+ of 32 threads for the long tail of every build.
#   debug = false      we strip(true) anyway, so don't spend time emitting a PDB.
# Result: release build dropped from ~15-30 min to a few minutes. For the rare
# "ship the absolute-fastest binary" case use `--profile release-max` below.
# Day-to-day, iterate with `cargo build` (dev, ~45s incremental) or `cargo check`.
[profile.release]
opt-level = 3
debug = false
incremental = false
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

# release-max: the old maximum-runtime config (whole-program fat LTO, single
# codegen unit). Much slower to build; use ONLY when shipping a binary where the
# last few % of runtime matters: `cargo build --profile release-max`.
[profile.release-max]
inherits = "release"
codegen-units = 1
lto = "fat"

[profile.bench]
inherits = "release"
debug = "line-tables-only"
