[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
repository = "https://github.com/ChrisRoyse/Calyx"
publish = false

[workspace.dependencies]
aes-gcm = "0.10"
blake3 = "1"
bincode = { package = "bincode_reloaded", version = "3.1.6", features = ["serde"] }
ciborium = "0.2"
crc32fast = "1"
criterion = "0.5"
cudarc = { version = "0.19.8", default-features = false }
cuvs-sys = "26.6.0"
ed25519-dalek = "2"
filetime = "0.2"
hkdf = "0.12"
memmap2 = "0.9"
nix = { version = "0.30", default-features = false, features = ["fs"] }
prometheus = { version = "0.14", default-features = false }
proptest = "1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1"
nvml-wrapper = "0.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
sha2 = "0.10"
signal-hook = "0.4"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
ulid = { version = "1", features = ["serde"] }
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1", features = ["serde"] }
wide = "1"
zeroize = "1"
zstd = "0.13"

# ── Build profiles ───────────────────────────────────────────────────────────
# Tuned for this workspace's high-churn, multi-agent build cadence. The cargo
# default (`debug = 2`, full DWARF) made every dev/test executable ~280 MB and
# ballooned the shared target/ dir to ~190 GB within days. `line-tables-only`
# keeps function names + file:line in panic/test backtraces — everything the
# gate (`cargo test`, `cargo check`) actually needs — while cutting executable
# size and link time several-fold. First-party crates keep line tables;
# dependencies get no debuginfo at all since we never step into them.
#
# Portable and machine-agnostic: these apply identically wherever the workspace
# builds, so they live here instead of a machine-local Cargo config. Linker
# choice and incremental policy remain local build-host concerns.
[profile.dev]
debug = "line-tables-only"

# Dependencies are compiled once and never stepped into during this project's
# test/gate workflow; stripping their debuginfo is the single biggest target/
# size reduction with zero loss of first-party debuggability.
[profile.dev.package."*"]
debug = false
