[package]
name = "synapse-a11y"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
base64.workspace = true
chromiumoxide.workspace = true
futures-util.workspace = true
png = "0.18"
regex.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
uiautomation.workspace = true
windows.workspace = true

[dev-dependencies]
criterion.workspace = true
futures-util.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
name = "uia_snapshot_depth2_60elem"
harness = false

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
