[package]
name = "synapse-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bit-set = "0.10.0"
serde.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
enigo.workspace = true
windows.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
sha2.workspace = true

[[bench]]
name = "action_curve_step_calc_natural"
harness = false

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
