[package]
name = "synapse-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
bit-set = "0.10.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
enigo.workspace = true
synapse-a11y = { version = "0.1.0", path = "../synapse-a11y" }
synapse-capture = { version = "0.1.0", path = "../synapse-capture" }
vigem-client = { workspace = true, features = ["unstable_ds4"] }
windows.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
arboard.workspace = true
enigo = { workspace = true, features = ["x11rb"] }

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true

[[bench]]
name = "action_curve_step_calc_natural"
harness = false

[[bench]]
name = "action_software_press"
harness = false

[[bench]]
name = "action_software_click"
harness = false

[[bench]]
name = "action_vigem_pad_report"
harness = false

[[bench]]
name = "action_recording_round_trip"
harness = false

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
