[package]
name = "synapse-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ort.workspace = true
serde.workspace = true
sha2.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
wasapi.workspace = true

[lints]
workspace = true
