[package]
name = "synapse-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
metrics.workspace = true
ort.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-models = { version = "0.1.0", path = "../synapse-models", features = ["directml"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
wasapi.workspace = true
windows.workspace = true

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
