[package]
name = "synapse-calyx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = ["calyx-cuda"]
calyx-cuda = ["calyx-forge/cuda"]

[dependencies]
base64.workspace = true
calyx-aster = { path = "../../calyx/crates/calyx-aster" }
calyx-core = { path = "../../calyx/crates/calyx-core" }
calyx-forge = { path = "../../calyx/crates/calyx-forge" }
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
windows-sys.workspace = true

[lints]
workspace = true
