[package]
name = "synapse-hid-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc16.workspace = true
serde.workspace = true
serialport.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
