[package]
name = "synapse-hid-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc16.workspace = true
serde.workspace = true
serialport.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
pico-hid = { path = "../../firmware/pico-hid", default-features = false }
proptest.workspace = true
synapse-test-utils = { version = "0.1.0", path = "../synapse-test-utils" }

[[bench]]
name = "hid_protocol_encode_1mb"
harness = false

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
