[package]
name = "synapse-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "synapse-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hyper.workspace = true
image.workspace = true
notify.workspace = true
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
sysinfo.workspace = true
synapse-action = { version = "0.1.0", path = "../synapse-action" }
synapse-a11y = { version = "0.1.0", path = "../synapse-a11y" }
synapse-audio = { version = "0.1.0", path = "../synapse-audio" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-capture = { version = "0.1.0", path = "../synapse-capture" }
synapse-everquest = { version = "0.1.0", path = "../synapse-everquest" }
synapse-hid-host = { version = "0.1.0", path = "../synapse-hid-host" }
synapse-perception = { version = "0.1.0", path = "../synapse-perception" }
synapse-profiles = { version = "0.1.0", path = "../synapse-profiles" }
synapse-reflex = { version = "0.1.0", path = "../synapse-reflex" }
synapse-storage = { version = "0.1.0", path = "../synapse-storage" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
tempfile.workspace = true
synapse-test-utils = { version = "0.1.0", path = "../synapse-test-utils" }

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
