[package]
name = "synapse-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "synapse-mcp"
path = "src/main.rs"

[[bin]]
name = "synapse-chrome-native-host"
path = "src/bin/synapse-chrome-native-host.rs"

[[bin]]
name = "synapse-fsv-toast-history"
path = "src/bin/synapse-fsv-toast-history.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
futures-util.workspace = true
hyper.workspace = true
image.workspace = true
metrics.workspace = true
notify.workspace = true
rmcp = { workspace = true, features = [
    "transport-streamable-http-server",
    "client",
    "transport-streamable-http-client-reqwest",
] }
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
portable-pty = "0.9.0"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
sysinfo.workspace = true
synapse-action = { version = "0.1.0", path = "../synapse-action" }
synapse-a11y = { version = "0.1.0", path = "../synapse-a11y" }
synapse-audio = { version = "0.1.0", path = "../synapse-audio" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-capture = { version = "0.1.0", path = "../synapse-capture" }
synapse-everquest = { version = "0.1.0", path = "../synapse-everquest" }
synapse-models = { version = "0.1.0", path = "../synapse-models", features = ["directml"] }
synapse-perception = { version = "0.1.0", path = "../synapse-perception" }
synapse-profiles = { version = "0.1.0", path = "../synapse-profiles" }
synapse-reflex = { version = "0.1.0", path = "../synapse-reflex" }
synapse-storage = { version = "0.1.0", path = "../synapse-storage" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11rb.workspace = true

[dev-dependencies]
# Integration tests decode the written PNG/JPEG to physically verify pixel dimensions.
image.workspace = true
insta.workspace = true
serde_json.workspace = true
tempfile.workspace = true
synapse-test-utils = { version = "0.1.0", path = "../synapse-test-utils" }
# Integration tests open the daemon's RocksDB directly to verify physical rows.
synapse-storage = { version = "0.1.0", path = "../synapse-storage" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }

[lints.rust]
unsafe_code = "allow"
unfulfilled_lint_expectations = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# This crate exposes large MCP wire schemas, long end-to-end tests, and
# platform bridge code. Keep subjective pedantic/nursery style debt explicit so
# `cargo clippy --workspace --all-targets -- -D warnings` remains useful for
# behavior-level regressions.
assigning_clones = "allow"
branches_sharing_code = "allow"
cast_possible_wrap = "allow"
collapsible_if = "allow"
default_trait_access = "allow"
float_cmp = "allow"
format_collect = "allow"
format_push_string = "allow"
iter_on_single_items = "allow"
large_stack_arrays = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
needless_collect = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
ref_option = "allow"
redundant_else = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
trivial_regex = "allow"
trivially_copy_pass_by_ref = "allow"
unreadable_literal = "allow"
unnecessary_debug_formatting = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
useless_let_if_seq = "allow"
unwrap_used = "deny"
expect_used = "deny"
