[package]
name = "synapse-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ort = ["dep:ort"]
cuda = ["ort", "ort/cuda"]
directml = ["ort", "ort/directml"]

[dependencies]
chrono.workspace = true
ort = { workspace = true, optional = true, default-features = false }
serde.workspace = true
sha2.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
