[package]
name = "synapse-perception"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
image.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-a11y = { version = "0.1.0", path = "../synapse-a11y" }
synapse-capture = { version = "0.1.0", path = "../synapse-capture" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
