[package]
name = "synapse-profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
metrics.workspace = true
notify.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
