[package]
name = "synapse-reflex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
chrono.workspace = true
crossbeam.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse-action = { version = "0.1.0", path = "../synapse-action" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-storage = { version = "0.1.0", path = "../synapse-storage" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-util.workspace = true

[[bench]]
name = "reflex_tick_jitter_idle"
harness = false

[[bench]]
name = "reflex_tick_jitter_under_load"
harness = false

[[bench]]
name = "event_to_subscriber"
harness = false

[[bench]]
name = "reflex_combo_step_interval"
harness = false

[lints.rust]
unsafe_code = "allow"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
