[package]
name = "synapse-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
calyx-aster = { path = "../../calyx/crates/calyx-aster" }
rocksdb = { workspace = true, features = ["lz4", "zstd", "multi-threaded-cf"] }
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
synapse-calyx = { version = "0.1.0", path = "../synapse-calyx" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
